--- a/AppBuscaCepMaui/Views/Menu.xaml
+++ b/AppBuscaCepMaui/Views/Menu.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppBuscaCepMaui.Views.Menu"
-             Title="Menu">
+             Title="Busca de cep com API">
     <VerticalStackLayout>
         <Grid ColumnDefinitions="*, *"
              RowDefinitions="*, *, *, *">
@@ -14,10 +14,10 @@
                     Text="Buscar Cep" Clicked="Button_Clicked"/>
 
             <Button Grid.Row="1" Grid.Column="1"
-                    Text="Buscar Cidades"/>
+                    Text="Buscar Cidades" Clicked="Button_Clicked_2"/>
 
             <Button Grid.Row="2" Grid.Column="0"
-                    Text="Buscar Ruas de Bairro"/>
+                    Text="Buscar Ruas de Bairro" Clicked="Button_Clicked_3"/>
             <Button Grid.Row="2" Grid.Column="1"
                     Text="Busca Endereço Pelo CEP"
                     Clicked="Button_Clicked_1"/>
