--- a/AppBuscaCepMaui/Views/Menu.xaml
+++ b/AppBuscaCepMaui/Views/Menu.xaml
@@ -11,16 +11,24 @@
                    Text="Api Busca Cep"/>
 
             <Button Grid.Row="1" Grid.Column="0"
-                    Text="Buscar Cep" Clicked="Button_Clicked"/>
+                    Text="Buscar Cep"
+                    Clicked="Button_Clicked"
+                    BackgroundColor="DarkGoldenrod"/>
 
             <Button Grid.Row="1" Grid.Column="1"
-                    Text="Buscar Cidades" Clicked="Button_Clicked_2"/>
+                    Text="Buscar Cidades"
+                    Clicked="Button_Clicked_2"
+                    BackgroundColor="DarkGoldenrod"/>
 
             <Button Grid.Row="2" Grid.Column="0"
-                    Text="Buscar Ruas de Bairro" Clicked="Button_Clicked_3"/>
+                    Text="Buscar Ruas de Bairro" 
+                    Clicked="Button_Clicked_3"
+                    BackgroundColor="DarkGoldenrod"/>
+            
             <Button Grid.Row="2" Grid.Column="1"
                     Text="Busca Endereço Pelo CEP"
-                    Clicked="Button_Clicked_1"/>
+                    Clicked="Button_Clicked_1"
+                    BackgroundColor="DarkGoldenrod"/>
         </Grid>
     </VerticalStackLayout>
 </ContentPage>
